# StoryForge

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: README  env.py  script.py.mako
alembic/versions/: 3d5c121d94ea_create_initial_domain_tables.py  3f86e80e0e51_add_milestone_12_full_book_workflow.py  69c75316dd7e_add_milestone_5_revision_workflow.py  a91f4d2c7e10_add_provider_governance.py  ad6fd0f94186_add_milestone_4_evaluations_and_.py  b550a962dc62_add_milestone_3_generation_data.py  b61d3f7a2c10_add_async_jobs_outbox_and_workers.py  c7d4e1a2b9f0_enforce_one_active_workflow_per_chapter.py  e8b4a2f7c913_add_hybrid_memory_and_graph.py  f2a6c8d91b04_add_milestone_6_api_metadata.py
deploy/: ingress.Dockerfile  ingress.mjs
docs/: api.md  architecture.md  async-jobs.md  book-evaluation.md  book-revision.md  book-runs.md  character-arcs.md  cli.md  cost-management.md  data-model.md  deployment.md  development.md  evaluation.md  foreshadowing.md  frontend.md  graph.md  llm.md  memory.md  model-routing.md  openapi.json  pacing.md  privacy.md  progress.md  providers.md  queue.md  reliability.md  retrieval.md  sse.md  timeline.md  ui-workflows.md  workflow.md
docs/decisions/: 0001-modular-monolith.md  0002-m3-planning-context-transactions.md  0003-m4-rule-evaluation-history.md  0004-m5-durable-revision-workflow.md  0005-m6-application-interfaces.md  0006-m7-container-postgres-delivery.md  0007-m8-pgvector-hybrid-memory.md  0008-m9-web-control-center.md  0009-m10-provider-governance.md  0010-asynchronous-jobs-and-transactional-outbox.md  0011-book-run-scheduling-and-snapshots.md  0012-global-analysis-evidence-and-frequency.md  0013-book-critic-scoring-and-targeted-revision.md  0014-book-budget-recovery-and-export-boundary.md
frontend/: .env.example  .prettierignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/jobs/: page.tsx
frontend/app/projects/: page.tsx
frontend/app/providers/: page.tsx
frontend/app/system/: page.tsx
frontend/components/layout/: app-shell.tsx
frontend/components/ui/: page.tsx  states.tsx
frontend/e2e/: helpers.ts  storyforge.spec.ts
frontend/features/books/: book-run-workspace.tsx  book-runs-page.tsx
frontend/features/facts/: fact-page.tsx
frontend/hooks/: use-storyforge.ts
frontend/tests/: api-client.test.ts  book-pages.test.tsx  formatting.test.ts  governance-pages.test.tsx  jobs-pages.test.tsx  page-components.test.tsx  setup.ts  ui-states.test.tsx  workflow.test.ts
scripts/: clean.py  export_openapi.py  milestone2_demo.py  wait_for_db.py
src/storyforge/: __init__.py  database.py  demo.py  enums.py  exceptions.py  logging_config.py  m10_demo.py  m11_demo.py  m12_demo.py  m5_demo.py  m6_demo.py  m7_demo.py  m8_demo.py  m9_demo.py  migrations.py  runtime.py  settings.py
tests/: __init__.py  _factories.py  conftest.py  m5_helpers.py
tests/integration/: test_constraints_and_cascades.py  test_migrations.py  test_milestone10_api.py  test_milestone10_cli.py  test_milestone10_postgres.py  test_milestone10_workflow_budget.py  test_milestone11_postgres.py  test_milestone12_books.py  test_milestone12_migration.py  test_milestone2_demo.py  test_milestone3_cli.py  test_milestone3_workflow.py  test_milestone4_cli.py  test_milestone4_evaluation_service.py  test_milestone4_migration.py  test_milestone5_cli.py  test_milestone5_migration.py  test_milestone5_workflow.py  test_milestone6_api.py  test_milestone6_cli.py  test_milestone6_migration.py  test_milestone7_postgres.py  test_milestone7_readiness.py  test_milestone8_cli.py  test_milestone8_memory_lifecycle.py  test_milestone8_postgres.py  test_milestone9_postgres.py  test_openai_compatible_provider.py
tests/unit/: test_database.py  test_health.py  test_milestone10_governance.py  test_milestone11_jobs.py  test_milestone12_book_analysis.py  test_milestone12_book_critic.py  test_milestone12_cli.py  test_milestone12_settings.py  test_milestone3_schemas_and_agents.py  test_milestone4_consistency.py  test_milestone4_critic.py  test_milestone4_mechanical.py  test_milestone4_scoring.py  test_milestone5_revision.py  test_milestone6_settings.py  test_milestone7_delivery_files.py  test_milestone7_settings_runtime.py  test_milestone8_embeddings_memory.py  test_milestone8_graph_retrieval.py  test_milestone8_settings.py  test_milestone9_frontend.py  test_mock_llm_provider.py  test_prompt_registry.py  test_repositories.py  test_schemas.py
(+220 files in other folders)
