[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "storyforge"
version = "0.1.0"
description = "A staged, multi-agent long-form fiction generation system."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { file = "LICENSE" }
authors = [{ name = "StoryForge contributors" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "alembic>=1.15,<2.0",
    "fastapi>=0.115,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "pydantic>=2.10,<3.0",
    "sqlalchemy>=2.0.40,<3.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1.0",
    "httpx2>=2.0,<3.0",
    "mypy>=1.14,<2.0",
    "pytest>=8.3,<10.0",
    "pytest-cov>=6.0,<8.0",
    "ruff>=0.9,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/storyforge"]

[tool.pytest.ini_options]
minversion = "8.3"
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--cov=storyforge",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["storyforge"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true
files = ["src/storyforge"]
